Добавлены 1) метод guess_numbers в views.py 2) result.html в templeates

--- a/webapp/templates/result.html
+++ b/webapp/templates/result.html
@@ -14,6 +14,7 @@
         <input type="text" name="numbers"/>
         <input type="submit" value="Send"/>
     </form>
+    <p>{{ result }}</p>
     <a href="history/">History</a>
 </body>
 </html>
