--- a/webapp/templates/history.html
+++ b/webapp/templates/history.html
@@ -5,12 +5,16 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
-    <h1>History</h1>
-    {% for key,value in history.items %}
+    <div class="container text-center">
+        <h1 class="mt-5">History</h1>
+        {% for key,value in history.items %}
             <p>turn: {{ key }} result: {{ value }}</p>
-    {% endfor %}
+        {% endfor %}
+    </div>
+
 </body>
 </html>
